# hermes-orchestrator

./: .gitignore  AGENTS.md  COMMERCIAL.md  CONTRIBUTING.md  INCUBATION.md  LICENSE  Makefile  README.md  SECURITY.md  TRADEMARK.md  clone.sh  new_channel_prompt_template.txt  plugins  scripts
.githooks/: README.md  pre-commit
.github/: FUNDING.yml
.github/workflows/: repo-sanity.yml
agents/: READ.me  README.md
agents/envs/: README.md  catatau.env.example  colmeio.env.example  node.env.example  orchestrator.env.example
agents/private/: README.md
agents/public/: README.md
apps/: README.md
apps/wasm-ui/: .gitignore  Dockerfile.build  Makefile  README.md  api.js  app.js  index.html  package.json  styles.css
apps/wasm-ui/wasm/log-worker/: Cargo.toml
apps/wasm-ui/wasm/log-worker/src/: lib.rs
crons/: .gitignore  README.md
crons/orchestrator/: backup_daily_brt.cron  backup_daily_brt.sh
datas/: .gitignore
docker/: README.md  compose.yml
docker/dockerfiles/: agent.dockerfile  openviking-entrypoint.sh  openviking.dockerfile
docs/: README.md
docs/agents/: README.md  node.env.md
docs/commands/: README.md  discord-acl-workflow.md  discord-role-acl.md  horc.md  update-engine.md
docs/context/: ACTIVE_STATE.json  CLAIMS.md  HARNESS.md  HARNESS_LOOPS.json  (+5 more)
hermes-agent/: .env.example  cli.py  run_agent.py
native/: AGENTS.md  NATIVE_EVOLUTION_CONTRACT.md  NATIVE_SHELL_CONTRACT.md
plugins/: README.md
scripts/: README.md  backup_nodes_to_gdrive.sh  clone.sh  install.sh
skills/: .gitignore
state/: README.md
tools/: android-build-docker.sh
(+1458 files in other folders)
