[package]
name = "log-worker"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Targeted WASM helpers for Hermes Orchestrator UI log and graph analysis"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
